--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ html {
     margin:0;
     width:100%;
     font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
 }
 body {
     margin: 0px;
@@ -36,12 +37,12 @@ body {
     height: 400px;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 0%;
     transform: translate(-50%, 50%);
     text-align: center;
 }
 .portfolio-profile img {
-    height: 250px;
+    height: 275px;
     width: 250px;
     border-radius: 50%;
 }
@@ -56,4 +57,24 @@ body {
     margin: 0px;
     font-size: 2.3rem;
     color: black;
+}
+
+/* MAIN */
+
+main {
+    background-color: grey;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+
+}
+#about {
+    padding: 45px;
+    margin: 0;
+    
+    color: white;
+}
+#about h2{
+    padding: 0px;
+    
 }
