--- a/main.css
+++ b/main.css
@@ -76,5 +76,26 @@ main {
 }
 #about h2{
     padding: 0px;
-    
+}
+#skills {
+    color: white;
+    background-color: darkslategray;
+
+}
+#skills h2{
+    font-size: 2.5rem;
+    font-weight: 300;
+    margin: 20px 0px;
+}
+#skills h3{
+    font-size: 1.8rem;
+    font-weight: 300;
+}
+.skill-main-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+.skill-main-grid h2 {
+    font-size: 1.5rem;
+   
 }
