--- a/main.css
+++ b/main.css
@@ -93,6 +93,7 @@ main {
     color: white;
     background-color: darkslategray;
     padding: 1px;
+    padding-bottom: 2rem;
 }
 #Skills h2{
     font-size: 2.5rem;
@@ -177,20 +178,28 @@ form {
     border-left-color: darkslategray;
     border-right-color: darkslategray;
     border-width: 3px;
-    border-style: dashed;
+    border-style: solid;
     padding: 10px;  
 }
 .portfolio-form {
     color: white;
 }
+.portfolio-form h2 {
+    color: white;
+    text-align: center;
+}
 .form-label {
     padding: 10px 0px;
     font-size: 1.3rem;
+    margin-left: 10.4rem;
 }
 .form-input input{
     width: 50%;
-    padding: 1px 0px;
+    padding: 3px 0px;
     border-radius: 8px;
+    display: block;
+    margin-left: 10.4rem;
+    margin-right: auto;
 }
 .form-input input:focus{
     transition: .7s;
@@ -201,9 +210,12 @@ form {
 .form-input-textarea {
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10px;
-    width: 98%;
+    width: 75%;
     padding: 7px 0px;
     height: 200px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .form-input-textarea textarea:focus {
     transition: .7s;
